[gd_scene load_steps=2 format=3 uid="uid://vdedjycwlrvc"]

[ext_resource type="Script" uid="uid://damvy8kt8ejcu" path="res://Scripts/audio_manager.gd" id="1_nieg5"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_nieg5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.588235, 0.603922, 0.423529, 1)

[node name="Button" type="Button" parent="."]
offset_left = 646.0
offset_top = 282.0
offset_right = 1234.0
offset_bottom = 386.0
text = "Yes Audio"

[node name="Button2" type="Button" parent="."]
offset_left = 649.0
offset_top = 424.0
offset_right = 1237.0
offset_bottom = 528.0
text = "No Audio"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
